ipc/ipdl/test/ipdl/error/multimanDupMgrsMgr.ipdl
include protocol multimanDupMgrs;

protocol multimanDupMgrsMgr {
    manages multimanDupMgrs;

child:
    async multimanDupMgrs();
    async __delete__();
};
